quicklog/tests/failures/prefixed_expr_without_name.stderr
error: expected identifier; expressions or non-identifiers must be accompanied by a name, e.g. info!(some_expr = ?&x, ...)
  --> tests/failures/prefixed_expr_without_name.rs:10:11
   |
10 |     info!(?&x);
   |           ^^^
